--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DeMiSTify"]
 	path = DeMiSTify
 	url = https://github.com/robinsonb5/DeMiSTify.git
+[submodule "mist-modules"]
+	path = mist-modules
+	url = git@github.com:Maverick-Shark/mist-modules.git
